--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@types/react": "^17.0.14",
+    "deepmerge": "^4.2.2",
     "eslint": "7.31.0",
-    "eslint-config-next": "11.0.1"
+    "eslint-config-next": "11.0.1",
+    "prettier": "^2.4.1",
+    "typescript": "^4.3.5"
   }
 }
