--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build:css": "postcss assets/main.css -o assets/main_browser.css"
   },
   "dependencies": {
+    "classnames": "^2.3.1",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
@@ -22,6 +23,7 @@
     "eslint-config-next": "11.0.1",
     "postcss": "^8.3.11",
     "postcss-cli": "^9.0.1",
+    "postcss-nesting": "^9.0.0",
     "prettier": "^2.4.1",
     "tailwindcss": "^2.2.19",
     "typescript": "^4.3.5"
